--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,38 @@
 {
-  "name": "Comparador de Preços",
-  "short_name": "PreçoCerto",
+  "name": "Preço Certo - Comparador de Preços",
+  "short_name": "Preço Certo",
   "description": "Aplicação PWA para comparar preços de produtos e gerir dados de supermercados mesmo offline.",
   "start_url": "./index.html",
   "display": "standalone",
   "scope": "./",
   "background_color": "#ffffff",
-  "theme_color": "#4c51bf",
+  "theme_color": "#2563eb",
   "orientation": "portrait",
   "prefer_related_applications": false,
   "icons": [
-    { "src": "images/icons/maskable-icon.svg", "sizes": "192x192", "type": "image/svg+xml", "purpose": "maskable" },
-    { "src": "images/icons/maskable-icon.svg", "sizes": "512x512", "type": "image/svg+xml", "purpose": "maskable" },
-    { "src": "images/cabecalho.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
-    { "src": "images/cabecalho.png", "sizes": "512x512", "type": "image/png", "purpose": "any" }
+    { 
+      "src": "images/icons/icon-192.svg", 
+      "sizes": "192x192", 
+      "type": "image/svg+xml", 
+      "purpose": "any"
+    },
+    { 
+      "src": "images/icons/icon-512.svg", 
+      "sizes": "512x512", 
+      "type": "image/svg+xml", 
+      "purpose": "any"
+    },
+    { 
+      "src": "images/icons/maskable-icon.svg", 
+      "sizes": "192x192", 
+      "type": "image/svg+xml", 
+      "purpose": "maskable"
+    },
+    { 
+      "src": "images/icons/maskable-icon.svg", 
+      "sizes": "512x512", 
+      "type": "image/svg+xml", 
+      "purpose": "maskable"
+    }
   ]
 }
