--- a/manifest.json
+++ b/manifest.json
@@ -11,27 +11,33 @@
   "prefer_related_applications": false,
   "icons": [
     { 
-      "src": "images/icons/icon-192.svg", 
+      "src": "images/icons/icon-192.png", 
       "sizes": "192x192", 
-      "type": "image/svg+xml", 
+      "type": "image/png", 
       "purpose": "any"
     },
     { 
-      "src": "images/icons/icon-512.svg", 
+      "src": "images/icons/icon-512.png", 
       "sizes": "512x512", 
-      "type": "image/svg+xml", 
+      "type": "image/png", 
       "purpose": "any"
     },
     { 
-      "src": "images/icons/maskable-icon.svg", 
+      "src": "images/icons/apple-touch-icon.png", 
+      "sizes": "180x180", 
+      "type": "image/png", 
+      "purpose": "any"
+    },
+    { 
+      "src": "images/icons/icon-192.png", 
       "sizes": "192x192", 
-      "type": "image/svg+xml", 
+      "type": "image/png", 
       "purpose": "maskable"
     },
     { 
-      "src": "images/icons/maskable-icon.svg", 
+      "src": "images/icons/icon-512.png", 
       "sizes": "512x512", 
-      "type": "image/svg+xml", 
+      "type": "image/png", 
       "purpose": "maskable"
     }
   ]
